fix box-container css clipping content

--- a/App/src/assets/scss/main.scss
+++ b/App/src/assets/scss/main.scss
@@ -174,11 +174,23 @@ button {
     width: 100%;
     margin: 36px auto;
     padding: 12px 12px 42px 12px;
+    z-index: 1;
 
-    @include corner-bezel(18.5px);
+    &::after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
 
-    box-shadow: inset 0 0 35px 25px rgba(15, 89, 171, 0.5);
-    background-color: rgba(34, 38, 102, 0.5);
+
+        @include corner-bezel(18.5px);
+
+        box-shadow: inset 0 0 35px 25px rgba(15, 89, 171, 0.5);
+        background-color: rgba(34, 38, 102, 0.5);
+    }
 }
 
 button.action-button {
